--- a/CampingPladsen/CSS/MasterSS.css
+++ b/CampingPladsen/CSS/MasterSS.css
@@ -1,4 +1,4 @@
-﻿body {
+﻿body, html {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
@@ -6,7 +6,9 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    height: 100%;
 }
+
 
 .navbar {
     height: 6%;
@@ -43,3 +45,6 @@ footer {
     display: flex;
     justify-content: space-evenly;
 }
+
+
+
