--- a/CampingPladsen/MasterPage.Master
+++ b/CampingPladsen/MasterPage.Master
@@ -48,13 +48,13 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="Pages/Booking">Booking</a>
+                        <a class="nav-link" href="Booking.aspx">Booking</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Pages/Faciliteter">Faciliteter</a>
+                        <a class="nav-link" href="Faciliteter.aspx">Faciliteter</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Pages/About">Om os</a>
+                        <a class="nav-link" href="About.aspx">Om os</a>
                     </li>
                 </ul>
             </div>
