--- a/CampingPladsen/CSS/BookingSS.css
+++ b/CampingPladsen/CSS/BookingSS.css
@@ -10,3 +10,24 @@
 .textBoxManager {
     justify-content: space-evenly;
 }
+
+
+* {
+    box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+    float: right;
+    width: 50%;
+    padding: 10px;
+    height: 400px; /* Should be removed. Only for demonstration */
+}
+
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
