--- a/CampingPladsen/MasterPage.Master
+++ b/CampingPladsen/MasterPage.Master
@@ -41,7 +41,7 @@
 
         <%-- Navigation bar --%>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top justify-content-center">
-            <a class="navbar-brand" href="Pages/Forside">Forside</a>
+            <a class="navbar-brand" href="index.aspx">Forside</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
