--- a/CampingPladsen/MasterPage.Master
+++ b/CampingPladsen/MasterPage.Master
@@ -41,20 +41,20 @@
 
         <%-- Navigation bar --%>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top justify-content-center">
-            <a class="navbar-brand" href="index.aspx">Forside</a>
+            <a class="navbar-brand" href="../Index.aspx">Forside</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="Booking.aspx">Booking</a>
+                        <a class="nav-link" href="../Pages/Booking.aspx">Booking</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Faciliteter.aspx">Faciliteter</a>
+                        <a class="nav-link" href="../Pages/Faciliteter.aspx">Faciliteter</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="About.aspx">Om os</a>
+                        <a class="nav-link" href="../Pages/About.aspx">Om os</a>
                     </li>
                 </ul>
             </div>
@@ -62,8 +62,8 @@
                 <a class="navbar-brand dropdown-toggle" data-toggle="dropdown"><span class="material-icons logIn">login
                 </span></a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="Pages/LogIn.aspx">Log in</a>
-                    <a class="dropdown-item" href="Pages/CreateUser.aspx">Create user</a>
+                    <a class="dropdown-item" href="../Pages/LogIn.aspx">Log in</a>
+                    <a class="dropdown-item" href="../Pages/CreateUser.aspx">Create user</a>
                 </div>
             </uli>
         </nav>
